# wechat-ai-daily

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  main.py  pyproject.toml  start_frontend_test.sh  web_app.py
apps/: __init__.py
apps/desktop/: __init__.py  main_window.py  styles.py  theme_manager.py
apps/desktop/panels/: config_panel.py  progress_panel.py
apps/desktop/utils/: config_manager.py  env_file_manager.py  log_handler.py
apps/desktop/workers/: workflow_worker.py
apps/web/: __init__.py  server.py
apps/web/ui/: app.js  index.html  styles.css
configs/: config.yaml
docs/: CHANGELOG_en.md  README_en.md
frontend/: README.md  index.html  logging_handler.py  progress_reporter.py  server.py
gui/: __init__.py  main_window.py  styles.py
gui/panels/: __init__.py  config_panel.py  log_panel.py  progress_panel.py
gui/utils/: __init__.py  config_manager.py
gui/workers/: __init__.py  workflow_worker.py
output/: articles_1_20260115_004921.md
scripts/: build_macos.sh  build_windows.bat
src/wechat_ai_daily/: __init__.py
src/wechat_ai_daily/llm/: __init__.py
src/wechat_ai_daily/utils/: __init__.py  autogui.py  env_loader.py  extractors.py  llm.py  paths.py  types.py  vlm.py  wechat.py
src/wechat_ai_daily/utils/wechat/: __init__.py  article_client.py  base_client.py  exceptions.py  html_normalizer.py  (+2 more)
src/wechat_ai_daily/workflows/: __init__.py  api_article_collector.py  article_fetcher.py  base.py  daily_generate.py  daily_publish.py  rpa_article_collector.py  wechat_autogui.py
templates/: README_cover.md  rich_text_template.html
tests/: diagnose_env.py  test_api_daily_workflow.py  test_api_full_workflow.py  test_appmsgpublish.py  test_build_official_account_url.py  test_complete_workflow.py  test_complete_workflow_with_progress.py  test_config_priority.py  test_cross_thread_push.py  test_daily_generate.py  test_daily_generate_workflow.py  test_daily_publish.py  test_env_loading.py  test_extract.py  test_frontend_integration.py  test_html_to_draft.py  test_logging_handler.py  test_open_wechat.py  test_simple_log_push.py  test_tt.py  test_with_frontend.py  test_workflow_integration.py
