[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-ai-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_ai_daily"]
