[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-ai-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.15.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pynput>=1.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "pillow>=12.1.0",
    "opencv-python>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_ai_daily"]
